force-app/main/default/objects/ProductAccessibilityConfig__mdt/ProductAccessibilityConfig__mdt.object-meta.xml
<CustomObject>
    <label>ProductAccessibilityConfig</label>
    <pluralLabel>ProductAccessibilityConfigs</pluralLabel>
</CustomObject>