force-app/main/default/objects/ProductAccessibilityConfig__mdt/fields/Config_Status__c.field-meta.xml
<CustomField>
    <fullName>Config_Status__c</fullName>
    <label>Config Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Complete No Overrides</fullName>
            </value>
            <value>
                <fullName>Complete with Override(s)</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>