force-app/main/default/objects/ProductAccessibilityConfig__mdt/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Editable</fullName>
                <default>true</default>
                <label>Editable</label>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>