force-app/main/default/objects/ProductAccessibilityConfig__mdt/listViews/Detailed_List.listView-meta.xml
<ListView>
    <fullName>Detailed_List</fullName>
    <columns>MasterLabel</columns>
    <columns>Profile_Name__c</columns>
    <columns>Quote_Status__c</columns>
    <columns>Config_Status__c</columns>
    <columns>Default_View__c</columns>
    <columns>View__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed List</label>
    <language>en_US</language>
</ListView>